--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.2
 homepage: https://github.com/Milimeter/flutterwave_payment
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
   flutter: ">=1.20.0"
 
 dependencies:
@@ -20,7 +20,7 @@ dependencies:
   equatable: ^2.0.3
   tripledes_nullsafety: ^1.0.1
   webview_flutter: ^2.0.12
-  tripledes: ^2.1.0
+  # tripledes: ^2.1.0
 
 dev_dependencies:
   flutter_test:
