--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutterwave_payment
 description: A new Flutter plugin for flutterwave payment integration
-version: 0.0.2
+version: 0.0.3+1
 homepage: https://github.com/Milimeter/flutterwave_payment
 
 environment:
@@ -8,29 +8,24 @@ environment:
   flutter: ">=1.20.0"
 
 dependencies:
-  flutter:
-    sdk: flutter
-  flutter_svg: ^0.22.0
-  http: ^0.13.3
-  intl: ^0.17.0
-  meta: ^1.3.0
   async: ^2.6.1
   dio: ^4.0.0
-  get_it: ^7.2.0
   equatable: ^2.0.3
+  flutter:
+    sdk: flutter
+  flutter_svg: ^1.0.3
+  get_it: ^7.2.0
+  http: ^0.13.4
+  intl: ^0.17.0
+  meta: ^1.7.0
   tripledes_nullsafety: ^1.0.1
-  webview_flutter: ^2.0.12
-  # tripledes: ^2.1.0
+  webview_flutter: ^3.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  # flutter_lints: ^1.0.0
-  
-
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
   # This section identifies this Flutter project as a plugin project.
@@ -57,7 +52,6 @@ flutter:
   #
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # To add custom fonts to your plugin package, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
